[package]
name = "libgdu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"

[features]
# enabled via meson with `HAVE_LOGIND`
logind = ["dep:systemd"]

[dependencies]
log.workspace = true
env_logger.workspace = true
udisks.workspace = true
gtk.workspace = true
gettext-rs.workspace = true
adw.workspace = true
#TODO: currently only used for async Mutex, maybe replace?
tokio = { version = "1.39.2", features = ["full"] }
systemd = { version = "0.10.0", optional = true }
async-recursion = "1.1.1"
libc = "0.2.155"
itertools = "0.13.0"
futures = "0.3.31"
