icondir = $(datadir)/icons/hicolor/22x22/apps
icon_DATA =				\
	gdu-eject.png			\
	gdu-mount.png			\
	gdu-unmount.png			\
	gdu-raid-array.png		\
	gdu-raid-array-start.png	\
	gdu-raid-array-stop.png		\
	gdu-encrypted-lock.png		\
	gdu-encrypted-unlock.png

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~
